# Excell

./: README.md  app.py  pyproject.toml  test_setup.py
excel_translator/: __init__.py  drawing_xml.py  logging_utils.py  processor.py  translators.py
scripts/: generate_test_assets.py  validate_translation.py
tests/: test_drawing_xml.py  test_processor.py
